--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-dim-modal",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Create a simple modal layer",
   "main": "dist/index.js",
   "scripts": {
@@ -19,6 +19,10 @@
     "type": "git",
     "url": "git+https://github.com/niceaji/simple-dim-modal.git"
   },
+  "files":[
+    "index.js",
+    "dist/index.js"
+  ],
   "keywords": [
     "simple",
     "modal",
